add tags to article store
